--- a/styles.css
+++ b/styles.css
@@ -392,6 +392,10 @@ button.close-button {
     position: relative;
 }
 
+button.close-button[type='dark'] span {
+    background-color: black;
+}
+
 button.close-button:hover span.cross-line:nth-child(2) {
     transform: rotate(45deg) scale(1.2) !important;
 }
@@ -589,4 +593,144 @@ button.login {
 button.login:hover {
     opacity: 1;
     cursor: pointer;
+}
+
+#add-event-popup {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    height: 100vh;
+    width: 100vw;
+    z-index: 10000;
+    visibility: hidden;
+    background-color: rgba(0, 0, 0, 0.626);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    padding: var(--gutter-l);
+}
+
+.add-event-container {
+    display: flex;
+    flex-direction: column;
+    gap: var(--gutter-s);
+    width: 100%;
+    height: 100%;
+
+    background-color: rgb(247, 247, 247);
+    padding: 0px;
+    border-radius: var(--rounded);
+    overflow: auto;
+    padding-top: 0px;
+
+}
+
+input,
+input[type="date"] {
+    background-color: rgb(229, 229, 229);
+    padding: var(--gutter-s);
+    border-radius: var(--rounded);
+    min-width: 200px;
+    max-width: 400px;
+    letter-spacing: 1px;
+}
+
+input:hover,
+input[type="date"]:hover {
+    opacity: .8;
+}
+
+input:focus,
+input[type="date"]:focus {
+    opacity: 1;
+}
+
+input,
+textarea,
+input[type="date"] {
+    background-color: rgb(229, 229, 229);
+    padding: var(--gutter-s);
+    border-radius: var(--rounded);
+    min-width: 200px;
+    max-width: 400px;
+    letter-spacing: 1px;
+}
+
+
+input[type="date"] {
+    background-color: rgb(229, 229, 229);
+    padding: var(--gutter-m);
+    padding-left: var(--gutter-s);
+    padding-right: var(--gutter-s);
+    border-radius: var(--rounded);
+    width: fit-content;
+    letter-spacing: 1px;
+}
+
+input::placeholder {
+    opacity: 1;
+    color: rgb(60, 60, 60);
+    letter-spacing: 1px;
+}
+
+input[type="checkbox"] {
+    width: fit-content;
+    min-width: 0;
+    padding: var(--gutter-s);
+    width: 20px;
+    height: 20px;
+}
+
+select {
+    appearance: none;
+    background-color: red;
+    padding: var(--gutter-s);
+    background-color: rgb(229, 229, 229);
+}
+
+select:hover {
+    opacity: 0.8;
+}
+
+.add-event-container .subjects-container {
+    display: flex;
+    flex-direction: column;
+    gap: var(--gutter-m);
+    height: fit-content;
+    padding: var(--gutter-m);
+}
+
+.row {
+    display: flex;
+    width: 200px;
+    gap: var(--gutter-s);
+    align-items: center;
+    border-radius: var(--rounded);
+    background-color: rgb(229, 229, 229);
+    padding: var(--gutter-xs);
+}
+
+.submit {
+    background-color: rgb(68, 24, 212);
+    width: fit-content;
+    position: sticky;
+    top: 0px;
+    right: 0px;
+    color: white;
+}
+
+.add-event-button-container {
+    width: 100%;
+    top: 0px;
+    right: 0px;
+    position: sticky;
+    display: flex;
+    gap: var(--gutter-m);
+    background-color: transparent;
+    justify-content: space-between;
+    background-color: white;
+    padding: var(--gutter-s);
+    border-bottom: 1px solid black;
+    border-top-left-radius: var(--rounded);
+    border-top-right-radius: var(--rounded);
+z-index: 100;
 }
