--- a/styles.css
+++ b/styles.css
@@ -758,3 +758,63 @@ select:hover {
     justify-content: center;
     align-items: center;
 }
+
+.cookie-container{
+     width: 1600px;
+    margin: auto;
+}
+
+.cookie-subcontainer{
+    width: 90%;
+    margin: auto; 
+}
+
+#cookies{
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    color: white;
+    background-color: rgba(0,0,0,0.7);
+    z-index: 10000;
+    display: none;
+}
+
+.cookie{
+    min-height: 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+
+}
+
+.cookies a{
+    color: rgba(255, 187, 0, 0.811);
+    font-weight: 500;
+    text-decoration: none;
+}
+
+#cookie-btn{
+    border-radius: 5px;
+    padding: 8px 12px 8px 12px;
+    font-size: 1rem;
+    font-family: inherit;
+    cursor: pointer;
+    border: 3px solid rgba(102, 0, 255, 0.811);
+    background-color: rgb(255, 255, 255);
+    color: rgb(102, 0, 255, 0.811);
+}
+
+@media(max-width:1600px){
+    .cookie-container{
+        width: 100%;
+    }
+}
+
+@media(max-width:1024px){
+.cookies{
+    padding: 10px 0;
+}
+
+}
