--- a/styles.css
+++ b/styles.css
@@ -512,21 +512,6 @@ p {
 
 }
 
-.tile::after {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 5px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-    -webkit-transition: var(--transition-slow);
-    transition: var(--transition-slow);
-    opacity: 0;
-}
-
 .tile:hover {
     -webkit-transform: scale(1.1, 1.1);
     transform: scale(1.1, 1.1);
@@ -537,10 +522,6 @@ p {
 .tile:active {
     -webkit-transform: scale(1.15, 1.15);
     transform: scale(1.15, 1.15);
-}
-
-.tile:hover::after {
-    opacity: 1;
 }
 
 .information-popup-backdrop {
@@ -554,7 +535,6 @@ p {
     top: 0px;
     left: 0px;
     display: flex;
-
     justify-content: center;
     align-items: center;
     visibility: hidden;
@@ -722,12 +702,14 @@ select:hover {
 }
 
 .submit {
-    background-color: rgb(68, 24, 212);
+    border-radius: var(--rounded);
+    background-color: #5464f3;
+    color: white;
     width: fit-content;
-    position: sticky;
+
     top: 0px;
     right: 0px;
-    color: white;
+    font-weight: 500;
 }
 
 .add-event-button-container {
