--- a/login/stijles.css
+++ b/login/stijles.css
@@ -150,3 +150,8 @@ input::placeholder {
     height: 100%;
     background-color: transparent;
 }
+
+button{
+    outline: none;
+    border: none;
+}
