--- a/styles.css
+++ b/styles.css
@@ -544,7 +544,7 @@ p {
     box-shadow: var(--shadow);
     border-radius: var(--rounded);
     background-color: rgb(17, 17, 17);
-    height: 600px;
+    height: fit-content;
     width: 700px;
     display: flex;
     flex-direction: column;
