--- a/styles.css
+++ b/styles.css
@@ -479,12 +479,14 @@ p {
 }
 
 .tile-container {
-    height: fit-content;
-    width: 100%;
-    display: flex;
+    height: 100%;
+    width: fit-content;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* 4 columns with equal width */
+    grid-gap: 40px; /* Space between grid items */
     justify-content: flex-start;
     align-items: center;
-    max-height: 500px;
+    max-height: 1500px;
     overflow: auto;
     gap: 40px;
     padding: var(--gutter-l);
@@ -496,7 +498,7 @@ p {
 
 .tile {
     background-color: rgb(220, 220, 220);
-    width: fit-content;
+    width: 200px;
     height: 200px;
     border-radius: var(--rounded);
     box-shadow: var(--shadow);
@@ -509,6 +511,7 @@ p {
     box-sizing: content-box;
     border: 4px solid #5464f3;
     border-bottom: 10px solid #5464f3;
+    
 
 }
 
@@ -732,13 +735,14 @@ select:hover {
 .tile-content-container {
     padding: var(--gutter-s);
     font-weight: 600;
-    font-size: 2em;
+    font-size: 1.5em;
     height: 100%;
     width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .cookie-container{
