--- a/login/stijles.css
+++ b/login/stijles.css
@@ -133,6 +133,16 @@ input::placeholder {
     transform: translate(-50%, -50%)
 }
 
+.alert-danger-register {
+    color: red;
+    text-align: center;
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%)
+}
+
+
 .alert-success {
     color: green;
     text-align: center;
