--- a/styles.css
+++ b/styles.css
@@ -590,6 +590,24 @@ button.login:hover {
     cursor: pointer;
 }
 
+.login-container:hover .dropdown-content {display: block;}
+
+.dropdown-content {
+    display: none;
+    position: relative;
+    background-color: #f1f1f1;
+    min-width: fit-content;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+  
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
 #add-event-popup {
     position: fixed;
     top: 0px;
