--- a/styles.css
+++ b/styles.css
@@ -239,7 +239,9 @@ ul.nav-container li:hover {
     height: fit-content;
     display: flex;
     flex-direction: column;
-    gap: var(--gutter-s);
+    justify-content: flex-start;
+    padding: var(--gutter-m);
+    gap: var(--gutter-m);
 }
 
 .event-container:hover {
@@ -247,30 +249,49 @@ ul.nav-container li:hover {
 }
 
 .event {
-    height: 50px;
-    width: 500px;
-    border-radius: var(--rounded);
+    height: fit-content;
+    width: 100%;
     font-size: 1.4em;
-    color: #f3f3f3;
+    color: #ffffff;
     gap: var(--gutter-s);
     opacity: 0.8;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
     align-items: center;
     padding: var(--gutter-s);
     -webkit-transition: var(--transition-slow);
     transition: var(--transition-slow);
+    border-radius: var(--rounded);
+
+    font-weight: 400;
+    letter-spacing: 2px;
+    z-index:1;
+    position: relative;
 }
 
-.event:hover {
+.event::after {
+    transition: inherit;
+    content: "";
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    position: absolute;
+    background-color: rgb(39, 39, 39);
+    z-index: -1;
+    opacity: .5;
+    border-radius: inherit;
+}
+
+
+.event:hover::after {
     opacity: 1;
-    transform: translateX(5%);
 }
 
 .event:hover .circle {
     opacity: 1;
-    transform: translateX(-90%);
+    transform: translateX(-5%);
+    opacity: 0;
 }
 
 span.circle {
@@ -279,7 +300,7 @@ span.circle {
     border-radius: 50%;
     background-color: white;
     opacity: 0;
-    transform: translateX(90%);
+    transform: translateX(94%);
     -webkit-transition: var(--transition-slow);
     transition: var(--transition-slow);
 }
