--- a/styles.css
+++ b/styles.css
@@ -248,6 +248,11 @@ ul.nav-container li:hover {
     cursor: default;
 }
 
+#event-tags{
+    display: flex;
+    gap: var(--gutter-s);
+}
+
 .event {
     height: fit-content;
     width: 100%;
