--- a/styles.css
+++ b/styles.css
@@ -462,8 +462,6 @@ span.cross-line {
     padding-top: 0px;
     background-color: rgb(0, 0, 0);
     gap: var(--gutter-m);
-    overflow-y: auto;
-    overflow-y: scroll;
 }
 
 .text-container::-webkit-scrollbar {
@@ -853,4 +851,10 @@ select:hover {
         padding: 10px 0;
     }
 
+}
+
+#iframe-maps{
+    width: 500px;
+    height: 300px;
+    min-height: 300px;
 }
