--- a/styles.css
+++ b/styles.css
@@ -911,3 +911,12 @@ button.menu{
     padding: var(--gutter-xs);
     border-radius: var(--rounded);
 }
+
+.alert-danger {
+    color: red;
+    text-align: center;
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%)
+}
