--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,6 @@ body {
     height: fit-content;
     max-width: 100vw;
     overflow: auto;
-    background-color: black;
 }
 
 ul {
@@ -65,75 +64,35 @@ a {
     color: rgb(183, 183, 183);
 }
 
-.header {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    background: rgb(14, 135, 204);
-    background: linear-gradient(183deg, rgb(0, 20, 32) 11%, rgba(0, 6, 8, 1) 74%);
-    text-align: left;
-    z-index: 3;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: var(--gutter-l);
-}
-
-.main {
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    scroll-behavior: smooth;
-    overflow-y: scroll;
-    overflow-x: hidden;
-}
-
-#content {
-    height: fit-content;
-    width: 100%;
-    padding: var(--gutter-m);
-    display: flex;
-    flex-direction: column;
-    gap: var(--gutter-m);
-    background-color: rgb(0, 0, 0);
-    padding: var(--gutter-l);
-}
-
-#events {
-    background-color: transparent;
-    height: fit-content;
-  
-}
-
 h1 {
     font-size: 6em;
     color: rgb(221, 221, 221);
     font-weight: 700;
     width: fit-content;
     height: fit-content;
-    background: rgb(133, 12, 255);
-    background: linear-gradient(225deg, #5464f3 30%, #7581f0 70%);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    color: #f2d16b;
     z-index: 1;
 }
 
 h2 {
-    font-size: 1.5em;
+    font-size: 1.4em;
+    color: rgb(221, 221, 221);
+    font-weight: 500;
+    width: fit-content;
+    padding-bottom: 0;
+    height: fit-content;
+    color: rgb(0, 0, 0);
+    z-index: 1;
+}
+
+.header-middle h2 {
+    font-size: 1.4em;
     color: rgb(221, 221, 221);
     font-weight: 700;
     width: fit-content;
     padding-bottom: 0;
     height: fit-content;
-    background-clip: text;
-    background: rgb(133, 12, 255);
-    background: linear-gradient(225deg, rgb(195, 168, 222) 0%, rgb(255, 255, 255)100%);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    color: rgb(250, 255, 195);
     z-index: 1;
 }
 
@@ -145,6 +104,159 @@ h3 {
     z-index: 1;
 }
 
+/* HEADER */
+
+#header {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    text-align: left;
+    z-index: 3;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: var(--gutter-m);
+    background: rgb(0, 17, 255);
+    background: linear-gradient(45deg, rgb(39, 46, 115) 27%, rgb(0, 154, 146) 77%);
+    gap: var(--gutter-m);
+}
+
+.gap {
+    background-color: transparent;
+    height: 8px;
+    width: 100vw;
+}
+
+.header-top {
+    height: fit-content;
+    display: flex;
+    justify-content: space-between;
+}
+
+.header-middle {
+    padding: var(--gutter-m);
+}
+
+/* LOGIN */
+
+.login-container {
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    gap: var(--gutter-s);
+    z-index: 100;
+    justify-content: center;
+    align-items: center;
+}
+
+button.login {
+    background-color: white;
+    width: fit-content;
+    height: fit-content;
+    padding: var(--gutter-m);
+    border-radius: var(--rounded);
+    display: flex;
+    gap: var(--gutter-m);
+    opacity: 0.7;
+    font-weight: 500;
+    transition: var(--transition);
+}
+
+button.login:hover {
+    opacity: 1;
+    cursor: pointer;
+}
+
+.login-container:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown-content {
+    display: none;
+    position: relative;
+    background-color: #f1f1f1;
+    min-width: fit-content;
+    box-shadow: var(--shadow);
+    z-index: 1;
+    transform: translateX(-50%);
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* NAV */
+
+.nav-placeholder {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background: rgba(0, 0, 0, 0.975);
+    backdrop-filter: blur(6px);
+    -webkit-backdrop-filter: blur(6px);
+    position: sticky;
+    z-index: 1000;
+    top: 0px;
+    bottom: 0px;
+    width: 100%;
+}
+
+.nav-container {
+    height: fit-content;
+    display: flex;
+    gap: var(--gutter-m);
+    padding: var(--gutter-xs);
+}
+
+.nav-container li {
+    padding: var(--gutter-s);
+    position: relative;
+    font-weight: 500;
+    font-size: 1em;
+    letter-spacing: 4px !important;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(223, 223, 223);
+    z-index: 100000;
+}
+
+.nav-container li:hover {
+    opacity: 0.7;
+}
+
+/* MAIN */
+
+#main {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+    background: rgb(0, 0, 0);
+}
+
+
+#content {
+    height: fit-content;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+
+}
+
+#events {
+    background-color: transparent;
+    height: fit-content;
+    padding: var(--gutter-m);
+    background-color: #fffffa;
+}
+
 .bubble {
     border-radius: 50%;
     border: 3px dotted rgb(153, 243, 255);
@@ -154,85 +266,6 @@ h3 {
     transform: translate(-50%, -50%);
     opacity: 0;
     background-color: rgba(255, 255, 255, 0.085)
-}
-
-.header {
-    top: 50%;
-    padding: var(--gutter-m);
-    text-align: left;
-    display: flex;
-    flex-direction: column;
-}
-
-div.nav-placeholder {
-    background-color: transparent;
-    width: fit-content;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgb(4, 0, 93);
-    background: linear-gradient(117deg, #5464f3 0%, #5464f3 100%);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    padding: var(--gutter-s);
-    position: sticky;
-    z-index: 1000;
-
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    width: 100%;
-}
-
-ul.nav-container {
-    height: fit-content;
-    display: flex;
-    gap: var(--gutter-m);
-}
-
-ul.nav-container li {
-    padding: var(--gutter-s);
-    border-radius: 20px;
-    position: relative;
-    font-weight: 600;
-    font-size: 1em;
-    color: rgb(221, 221, 221);
-    letter-spacing: 2px !important;
-    z-index: 2;
-    border-radius: var(--rounded);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    z-index: 100000;
-}
-
-ul.nav-container li:hover {
-    cursor: default !important;
-}
-
-ul.nav-container li::after {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: rgb(255, 255, 255);
-    z-index: -1;
-    opacity: 0;
-    box-shadow: var(--shadow);
-    border-radius: inherit;
-}
-
-ul.nav-container li:hover::after {
-    opacity: 1;
-    transform: scaleX(1.05) scaleY(1.05);
-}
-
-ul.nav-container li:hover {
-    color: black;
 }
 
 .edit-button {
@@ -268,18 +301,22 @@ ul.nav-container li:hover {
 }
 
 .event-container {
-    -ms-overflow-style: none;  /* Internet Explorer 10+ */
-    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;
+    /* Internet Explorer 10+ */
+    scrollbar-width: none;
+    /* Firefox */
 }
-.event-container::-webkit-scrollbar { 
-    display: none;  /* Safari and Chrome */
+
+.event-container::-webkit-scrollbar {
+    display: none;
+    /* Safari and Chrome */
 }
 
 .event-container:hover {
     cursor: default;
 }
 
-#event-tags{
+#event-tags {
     display: flex;
     gap: var(--gutter-s);
 }
@@ -298,10 +335,9 @@ ul.nav-container li:hover {
     -webkit-transition: var(--transition-slow);
     transition: var(--transition-slow);
     border-radius: var(--rounded);
-
     font-weight: 400;
     letter-spacing: 2px;
-    z-index:1;
+    z-index: 1;
     position: relative;
 }
 
@@ -352,14 +388,6 @@ span.circle {
     white-space: nowrap;
 }
 
-.login- {
-    display: flex;
-    flex-direction: column;
-    height: fit-content;
-    gap: var(--gutter-s);
-    color: black;
-}
-
 .link {
     color: white !important;
     text-decoration: none;
@@ -376,6 +404,8 @@ span.circle {
     display: flex;
     flex-direction: column;
     gap: var(--gutter-m);
+    padding: var(--gutter-m);
+
 }
 
 #canvas {
@@ -532,16 +562,38 @@ p {
     display: flex;
     flex-direction: column;
     gap: var(--gutter-m);
+    background-color: rgb(244, 244, 244);
+    padding: var(--gutter-m);
 }
 
+
+#about_us * {
+    color: black;
+}
+
+#about_us .container{
+    display: flex;
+    flex-direction: column;
+}
+
+#about_us {
+    background-color: transparent;
+    display: flex;
+}
+
+#about_us .content {
+    display: flex;
+    gap: var(--gutter-m);
+    background-color: rgb(255, 255, 255);
+}
+
+
 .tile-container {
-    height: 100%;
-    width: fit-content;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr); /* 4 columns with equal width */
-    grid-gap: 40px; /* Space between grid items */
-    justify-content: flex-start;
+    display: flex;
+    /* 4 columns with equal width */
+    /* Space between grid items */
     align-items: center;
+    width: 100%;
     max-height: 1500px;
     overflow: auto;
     gap: 40px;
@@ -553,29 +605,45 @@ p {
 }
 
 .tile {
-    background-color: rgb(220, 220, 220);
+    background-color: rgb(255, 255, 255);
     width: 200px;
+    min-width: 200px;
     height: 200px;
-    border-radius: var(--rounded);
-    box-shadow: var(--shadow);
+    border-radius: 12px;
     position: relative;
     -webkit-transition: var(--transition-slow);
     transition: var(--transition-slow);
     display: flex;
     flex-direction: column;
     padding: var(--gutter-s);
-    box-sizing: content-box;
-    border: 4px solid #5464f3;
-    border-bottom: 10px solid #5464f3;
-    
-
+    z-index: 1;
 }
 
 .tile:hover {
-    -webkit-transform: scale(1.1, 1.1);
-    transform: scale(1.1, 1.1);
+    -webkit-transform: scale(1.05, 1.05);
+    transform: scale(1.05, 1.05);
     z-index: 100;
     cursor: default;
+}
+
+.tile::after {
+    content: "";
+    border-radius: inherit;
+    position: absolute;
+    z-index: -1;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    box-shadow: var(--shadow);
+    opacity: 0.2;
+
+    -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.tile:hover::after {
+    opacity: 1;
 }
 
 .tile:active {
@@ -602,7 +670,7 @@ p {
 .information-popup-content {
     box-shadow: var(--shadow);
     border-radius: var(--rounded);
-    background-color: rgb(17, 17, 17);
+    background-color: rgb(255, 255, 255);
     height: fit-content;
     width: 700px;
     display: flex;
@@ -617,57 +685,7 @@ p {
     letter-spacing: 2px;
     line-height: 1.4em;
     font-weight: 300;
-}
-
-.login-container {
-    width: fit-content;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    gap: var(--gutter-s);
-    position: absolute;
-    right: 0px;
-    top: 0px;
-    margin: var(--gutter-l);
-    z-index: 100;
-    justify-content: center;
-    align-items: center;
-}
-
-button.login {
-    background-color: white;
-    width: fit-content;
-    height: fit-content;
-    padding: var(--gutter-m);
-    border-radius: 7px;
-    display: flex;
-    gap: var(--gutter-m);
-    opacity: 0.7;
-    font-weight: 500;
-    transition: var(--transition);
-}
-
-button.login:hover {
-    opacity: 1;
-    cursor: pointer;
-}
-
-.login-container:hover .dropdown-content {display: block;}
-
-.dropdown-content {
-    display: none;
-    position: relative;
-    background-color: #f1f1f1;
-    min-width: fit-content;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-  
-.dropdown-content a {
     color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
 }
 
 #add-event-popup {
@@ -868,7 +886,8 @@ select:hover {
     margin: auto;
 }
 
-#cookie-btn, #decline-btn {
+#cookie-btn,
+#decline-btn {
     border-radius: 5px;
     padding: 8px 12px 8px 12px;
     font-size: 1rem;
@@ -894,27 +913,27 @@ select:hover {
 
 }
 
-#iframe-maps{
+#iframe-maps {
     width: 500px;
     height: 300px;
     min-height: 300px;
 }
 
-button.menu{
+button.menu {
     background-color: red;
     width: fit-content;
     height: fit-content;
     padding: var(--gutter-s);
 }
 
-#event-audience{
+#event-audience {
     display: flex;
     gap: var(--gutter-m);
     max-width: 100%;
     align-items: center;
 }
 
-.audience{
+.audience {
     background-color: white;
     color: black;
     padding: var(--gutter-xs);
@@ -951,7 +970,7 @@ button.favorites:hover {
 
 select {
     width: auto;
-    width:150px;
+    width: 150px;
 }
 
 button.favorites {
@@ -973,7 +992,8 @@ button.favorites:hover {
     display: flex;
     border-radius: 0;
 }
-#events .row{
+
+#events .row {
     padding-bottom: var(--gutter-s);
 }
 
